--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/128/17873/17873030.png" />
+    <link rel="icon" type="image/svg+xml" href="/logoambabd.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Noto+Sans+Devanagari:wght@400;700&display=swap" rel="stylesheet">
 
